--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -3,7 +3,7 @@
 %\pagenumbering{arabic}
 \section{Introduction}
 \begin{figure}[h]
-	\includegraphics[scale=0.14]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/cado_logo.png}
+	\includegraphics[scale=0.14]{./Template LaTeX/Images/cado_logo.png}
 	\centering
 	\caption{CADOROM}
 \end{figure}
@@ -29,3 +29,26 @@ CADORIM offre une large palette de prestations organisées autour des activités
 	\item Des agences des reçoivent d'argent et de service client
 	
 \end{enumerate}
+\section{Planification du projet}
+J'effectuais le diagramme de Gantt, pour avoir une meilleure compréhension de la chronologie des étapes de notre projet.
+\newline
+\newline
+\includegraphics[width=500px,height=175px]{./Template LaTeX/Images/gantt.png}
+\newline
+Le projet est subdivisé en plusieurs phases.
+\begin{enumerate}
+\item Une phase comprenant l’étude de l’existant et analyse des besoins, en
+intervenant les différents acteurs du projet.
+\item Une phase de conception consistant à modéliser et formaliser les
+données brutes du cahier de charge
+\item Une phase d’implémentation consiste à traduire techniquement les
+données provenant de la conception.
+\item Déploiement : externalisation des ressources.
+\end{enumerate}
+\newline
+La méthodologie utilisée tout au long de ce projet est XP, de ce fait on a
+chaque jour une réunion de mis à point de ce qui a été fait et de ce qui
+ne l’ai pas.
+-L’outil de planification et de répartition des tâches utilisées est planzone:
+pour la planification et la gestion du projet
+
